Fix for Android keyboard behavior, which pull page to the bottom. Issue caused by '-webkit-backface-visibility: hidden;'. For more details visit project's page on google - http://code.google.com/p/jqtouch/issues/detail?id=398

--- a/jqtouch/jqtouch.css
+++ b/jqtouch/jqtouch.css
@@ -295,7 +295,7 @@ body {
 
 /* Flip Left */
 
-#jqt .flipleft {
+#jqt.supports3d .flipleft {
     -webkit-backface-visibility: hidden;
 }
 
@@ -329,7 +329,7 @@ body {
 
 /* Flip Right */
 
-#jqt .flipright {
+#jqt.supports3d .flipright {
     -webkit-backface-visibility: hidden;
 }
 
